--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ server.port=9999
 #views
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+#databases
+spring.datasource.url=jdbc:mysql//localhost:3306/springmix
+spring.datasource.username=root
+spring.datasource.password=21August2004
